--- a/week1/css/all.css
+++ b/week1/css/all.css
@@ -52,6 +52,10 @@ body {
   height: 100%;
 }
 
+.profile {
+  margin-bottom: 72px;
+}
+
 .profile .title {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -78,7 +82,6 @@ body {
 
 .profile .content {
   padding: 25px 0 0 50px;
-  margin-bottom: 72px;
   font-size: 24px;
   line-height: 36px;
 }
@@ -99,6 +102,10 @@ body {
   vertical-align: middle;
   border-radius: 50%;
   background-color: #96A9C4;
+}
+
+.education {
+  margin-bottom: 72px;
 }
 
 .education .title {
@@ -171,7 +178,7 @@ section.skill::before {
   content: "";
   display: block;
   width: 100%;
-  height: 50%;
+  height: 72.8%;
   position: absolute;
   z-index: -1;
   top: 50%;
@@ -366,12 +373,16 @@ footer.contact .content > ul > li {
   font-size: 24px;
   line-height: 33px;
   margin-bottom: 16px;
+  text-align: center;
 }
 
 footer.contact .content > ul > li ul.social-icons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 footer.contact .content > ul > li ul.social-icons a {
