--- a/week1/css/all.css
+++ b/week1/css/all.css
@@ -99,6 +99,7 @@ body {
   top: 10px;
   width: 16px;
   height: 16px;
+  vertical-align: middle;
   border-radius: 50%;
   background-color: #96A9C4;
 }
@@ -148,6 +149,7 @@ body {
   top: 3px;
   width: 16px;
   height: 16px;
+  vertical-align: middle;
   border-radius: 50%;
   background-color: #96A9C4;
 }
