--- a/week3&4/source/helpers/_media.scss
+++ b/week3&4/source/helpers/_media.scss
@@ -10,6 +10,12 @@
 //     }
 // }
 
+@mixin md {
+    @media screen and (max-width: 767.98px){
+        @content;
+    }
+}
+
 @mixin pad{
     @media screen and (max-width:991.99px) and (min-width:768px){
         @content;
