--- a/week4/source/sass/all.scss
+++ b/week4/source/sass/all.scss
@@ -15,6 +15,7 @@
 @import "./layout/layout";
 @import "./components/banner";
 @import "./components/feature";
+@import "./components/classic"
 
 // header.header{
 //     background: $primary;
