--- a/week4/source/sass/helpers/_media.scss
+++ b/week4/source/sass/helpers/_media.scss
@@ -1,3 +1,8 @@
+@mixin pc(){
+    @media screen and (min-width:992px){//有用
+        @content;
+    }
+}
 @mixin phone {
     @media screen and (max-width:767.98px) {
         @content;
@@ -11,7 +16,8 @@
 // }
 
 @mixin md {
-    @media screen and (max-width: 767.98px){
+    // @media screen and (max-width: 767.98px){
+    @media screen and (max-width: 991.99px){
         @content;
     }
 }
