--- a/week4/source/sass/all.css
+++ b/week4/source/sass/all.css
@@ -3857,7 +3857,7 @@ header.header .menu-dropdown a {
   }
 }
 
-@media screen and (max-width: 991.99px) and (min-width: 768px) {
+@media screen and (max-width: 991.99px) {
   .web-page.feature {
     padding: 40px 0 40px;
   }
@@ -3874,7 +3874,7 @@ header.header .menu-dropdown a {
   }
 }
 
-@media screen and (max-width: 991.99px) and (min-width: 768px) {
+@media screen and (max-width: 991.99px) {
   .web-page.feature .container {
     max-width: 696px;
   }
@@ -3918,7 +3918,7 @@ header.header .menu-dropdown a {
   padding: 0 9px;
 }
 
-@media screen and (max-width: 991.99px) and (min-width: 768px) {
+@media screen and (max-width: 991.99px) {
   .web-page.feature li {
     width: 50%;
     padding: 0 64px;
@@ -4007,7 +4007,7 @@ header.header .menu-dropdown a {
   overflow: hidden;
 }
 
-@media screen and (max-width: 991.99px) and (min-width: 768px) {
+@media screen and (max-width: 991.99px) {
   .web-page.classic .container {
     max-width: 672px;
   }
@@ -4021,7 +4021,7 @@ header.header .menu-dropdown a {
   color: #650300;
 }
 
-@media screen and (max-width: 991.99px) and (min-width: 768px) {
+@media screen and (max-width: 991.99px) {
   .web-page.classic .title {
     font-size: 32px;
   }
@@ -4043,6 +4043,12 @@ header.header .menu-dropdown a {
   }
 }
 
+@media screen and (max-width: 767.98px) {
+  .web-page.classic li.classic-item {
+    position: relative;
+  }
+}
+
 .web-page.classic li.classic-item .photo {
   width: 67%;
   padding-bottom: 26.6%;
@@ -4050,9 +4056,17 @@ header.header .menu-dropdown a {
   background-size: cover;
 }
 
-@media screen and (max-width: 991.99px) and (min-width: 768px) {
+@media screen and (max-width: 991.99px) {
   .web-page.classic li.classic-item .photo {
     width: 61%;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .web-page.classic li.classic-item .photo {
+    width: 93.8%;
+    padding-bottom: 35.73%;
+    margin: 0 auto;
   }
 }
 
@@ -4069,9 +4083,21 @@ header.header .menu-dropdown a {
           align-items: center;
 }
 
-@media screen and (max-width: 991.99px) and (min-width: 768px) {
+@media screen and (max-width: 991.99px) {
   .web-page.classic li.classic-item .product-name {
     width: 39%;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .web-page.classic li.classic-item .product-name {
+    width: auto;
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
   }
 }
 
@@ -4084,7 +4110,7 @@ header.header .menu-dropdown a {
   background-position: 50% 50%;
 }
 
-@media screen and (max-width: 991.99px) and (min-width: 768px) {
+@media screen and (max-width: 991.99px) {
   .web-page.classic li.classic-item .product-name span {
     width: 32px;
     height: 32px;
@@ -4098,7 +4124,7 @@ header.header .menu-dropdown a {
   font-weight: bold;
 }
 
-@media screen and (max-width: 991.99px) and (min-width: 768px) {
+@media screen and (max-width: 991.99px) {
   .web-page.classic li.classic-item .product-name h3 {
     font-size: 28px;
   }
