--- a/week4/source/sass/helpers/_media.scss
+++ b/week4/source/sass/helpers/_media.scss
@@ -23,7 +23,8 @@
 }
 
 @mixin pad{
-    @media screen and (max-width:991.99px) and (min-width:768px){
+    // @media screen and (max-width:991.99px) and (min-width:768px){
+    @media screen and (max-width:991.99px){
         @content;
     }
 }
