--- a/week4/source/sass/all.scss
+++ b/week4/source/sass/all.scss
@@ -15,7 +15,9 @@
 @import "./layout/layout";
 @import "./components/banner";
 @import "./components/feature";
-@import "./components/classic"
+@import "./components/classic";
+@import "./components/joint";
+@import "./components/card";
 
 // header.header{
 //     background: $primary;
