--- a/week4/source/sass/helpers/_init.scss
+++ b/week4/source/sass/helpers/_init.scss
@@ -14,7 +14,9 @@ li,a{
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Microsoft JhengHei", Roboto, "Helvetica Neue", Arial, sans-serif;
     line-height: 1.5;
-    height: 100vh;
+    // height: 100vh;
+    // height: calc(100%+100px);//為何無效
+    height:6000px;
 }
 
 *, *:before, *:after{
